--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/controllers/sign-upController.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/homeController.js"></script>
+    <script src="js/controllers/menuController.js"></script>
     
     <!-- directives -->
     <script src="js/directives/passwordMatch.js"></script>
