--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,14 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     
    
     <!-- ionic/angularjs js --> 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script type="lib/ionic/js/angular/angular.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+   <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 
     <!-- Parse -->
@@ -31,6 +32,8 @@
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/homeController.js"></script>
     <script src="js/controllers/menuController.js"></script>
+    <script src="js/controllers/tableController.js"></script>
+    <script src="js/controllers/orderDetailController.js"></script>
     
     <!-- directives -->
     <script src="js/directives/passwordMatch.js"></script>
