--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script type="lib/ionic/js/angular/angular.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 
