--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/menuController.js"></script>
     <script src="js/controllers/tableController.js"></script>
     <script src="js/controllers/orderDetailController.js"></script>
+    <script src="js/controllers/orderController.js"></script>
     
     <!-- directives -->
     <script src="js/directives/passwordMatch.js"></script>
