--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+  <!--   <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet"> -->
+   
    
     <!-- ionic/angularjs js --> 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -35,9 +37,12 @@
     <script src="js/controllers/tableController.js"></script>
     <script src="js/controllers/orderDetailController.js"></script>
     <script src="js/controllers/orderController.js"></script>
+    <script src="js/controllers/reportController.js"></script>
     
     <!-- directives -->
     <script src="js/directives/passwordMatch.js"></script>
+    <!-- chart -->
+    
   </head>
   <body ng-app="starter">     
   
