--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+   <!--  <link href="css/style.css" rel="stylesheet"> -->
   <!--   <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet"> -->
    
    
